Accepting and declining races
